# sample_agentic_ai_strands

./: .gitignore  .gitmodules  AWS_ECS_ARCHITECTURE.md  CLAUDE.md  Dockerfile.backend  HTTPS_SETUP.md  README.en.md  README.md  README_cases.md  SECURITY.md  SECURITY_MIGRATION.md  docker-compose.yml  env.example  generate_certs.sh  pyproject.toml  start_all.sh  stop_all.sh  test_bedrock.py
cdk/: .gitignore  README-CDK.md  README-CDK_en.md  cdk-build-and-deploy.sh  cdk.context.json  cdk.json  cleanup-secrets.sh  package-lock.json  package.json  update-ecs-services.sh  update-secrets.sh
cdk/lib/: ecs-fargate-stack.ts
cfn/: strands-stack.yaml
conf/: config.json  config_cn.json
docs/: test.db
docs/aws-kb-retrieval-server/: index.ts
react_ui/: .dockerignore  .env.example  Dockerfile  HTTPS_SETUP.md  README.md  docker-compose.yml  generate-certs.js  https-server.js  next.config.js  package-lock.json  package.json  pm2run.config.js  tailwind.config.ts  tsconfig.tsbuildinfo  verify-components.js
react_ui/app/: globals.css  layout.tsx
react_ui/components/: theme-provider.tsx  theme-toggle.tsx
react_ui/lib/: auth.ts  store.ts  utils.ts
src/: chat_client.py  constant.py  data_types.py  health.py  main.py  mcp_client_strands.py  security.py  strands_agent_client.py  strands_agent_client_stream.py  utils.py
src/custom_tools/: mem0_memory.py
src/internal_tools/: __init__.py  aws_session.py  clickstream_doc_tool.py  create_msk_topics_tool.py  deploy_alb_for_ecs_tool.py  (+22 more)
tests/: mcp_client_cli.sh  test_add_mcp_api.sh  test_chat_api.sh  test_chat_api_stream.sh
(+54 files in other folders)
